[package]
name = "rust_lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["arbitrary_precision"] }
serde_traitobject = "0.2.7"
lazy_static = "1.4.0"
build_id = "0.2.1"