[package]
name = "rust_lab"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["arbitrary_precision"] }
rayon = "1.10.0"

[dev-dependencies]
soa_derive = "0.13.0"
